--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <meta name="description" content="Athens, Greece – Explore its rich history, ancient landmarks, and timeless culture." />
+  <meta name="description" content="Athens, Greece – Luz's Favorite City" />
   <title>Luz's Favorite City: Athens, Greece</title>
 
   <style>
